[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-training-cookbook"
version = "1.0.0"
description = "Introductory Machine Learning: Hands-On Training Notebook"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ML Training Team" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

# Core Dependencies
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=6.5.0",
]

# Optional Dependencies
[project.optional-dependencies]
# Enhanced Jupyter experience
jupyter-enhanced = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "jupyter-contrib-nbextensions>=0.7.0",
]

# Development tools
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.5.0",
]

# Advanced ML libraries for extended learning
advanced = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "plotly>=5.15.0",
    "shap>=0.42.0",
]

# All optional dependencies
all = [
    "ml-training-cookbook[jupyter-enhanced,dev,advanced]"
]

[project.urls]
Homepage = "https://github.com/ml-training/cookbook"
Documentation = "https://github.com/ml-training/cookbook/wiki"
Repository = "https://github.com/ml-training/cookbook.git"
Issues = "https://github.com/ml-training/cookbook/issues"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]